# CrocUtils

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  COPYING  Makefile  README.md  convert.sh  default.nix  flake.nix  map.schema.json  release.nix
.github/workflows/: build.yml
cJSON/: CMakeLists.txt
cfextract/: CMakeLists.txt  main.c
crocconvert/: CMakeLists.txt  br_wadfs.c  brender.c  cccc.c  crocconvert.c  defs.h  main.c  material.c  model.c  pixelmap.c  savetga.c  savetga.h  texconv.c  track.c  wad.c
croctool/: CMakeLists.txt  config.h.in  crocfile_build.c  crocfile_dump.c  crocfile_extract.c  main.c  map_compile.c  map_convert.c  map_decompile.c  map_unwad.c  mat_toscr.c  mod_burst2obj.c  psxtex_convert.c  strun_dump.c  tex_convert.c  version.c  wad_dump_index.c  wad_extract.c  wad_extract_all.c
libcroc/: CMakeLists.txt  checksum.c  chunk.c  col.c  dir.c  libcroc.h  map.c  map.h  map_json_read.c  map_json_write.c  map_read.c  map_write.c  mod.c  psx.c  strun.c  texture.c  util.c  vec.c  wad.c  wadc.cpp
libcroc/include/: libcroc.h
libcroc/include/libcroc/: checksum.h  chunk.h  chunkdef.h  col.h  coldef.h  dir.h  dirdef.h  fixed.h  fixeddef.h  map.h  mapdef.h  mod.h  moddef.h  psx.h  psxdef.h  strun.h  strundef.h  tex.h  texdef.h  util.h  utildef.h  vec.h  vecdef.h  wad.h  waddef.h
maptool/: CMakeLists.txt  checksum.c  json_read.c  json_write.c  main.c  map.c  map.h  map_read.c  map_write.c  unwad.c
modtool/: CMakeLists.txt  main.c
resources/: crocpsxtex2.bt  map.schema.json  strun.bin.pc.json
resources/crocfile/beta012/: manifest.json
resources/crocfile/sles00593/: manifest.json
resources/crocfile/slps01055/: manifest.json
resources/crocfile/slus00530/: manifest.json
resources/crocfile/techdemo/: manifest.json
resources/maps/json/beta012/: MP000_00.json  MP000_01.json  MP000_02.json  MP000_03.json  MP000_04.json  MP000_09.json  MP001_02.json  MP002_00.json  MP002_01.json  MP002_02.json  MP002_03.json  MP002_04.json  MP002_05.json  MP002_06.json  MP002_07.json  MP002_08.json  MP002_09.json  MP003_00.json  MP003_02.json  MP003_03.json  MP003_04.json  MP003_05.json  MP003_06.json  MP003_07.json  MP003_08.json  MP003_09.json  MP004_00.json  MP004_01.json  MP004_02.json  MP004_03.json  MP004_04.json  MP004_05.json  MP004_06.json  MP004_07.json  MP004_08.json  MP005_00.json  MP005_01.json  MP005_02.json  MP005_03.json  MP005_04.json  (+221 more)
resources/maps/json/pc/: MP000_00.json  MP000_01.json  MP000_02.json  MP000_03.json  MP000_04.json  MP000_05.json  MP000_06.json  MP000_07.json  MP000_08.json  MP000_09.json  MP001_00.json  MP002_00.json  MP002_01.json  MP002_02.json  MP002_03.json  MP002_04.json  MP002_05.json  MP002_06.json  MP002_07.json  MP002_08.json  MP002_09.json  MP003_00.json  MP003_02.json  MP003_03.json  MP003_04.json  MP003_05.json  MP003_06.json  MP003_07.json  MP003_08.json  MP003_09.json  MP004_00.json  MP004_01.json  MP004_02.json  MP004_03.json  MP004_04.json  MP004_05.json  MP004_06.json  MP004_07.json  MP004_08.json  MP005_00.json  (+382 more)
resources/maps/json/sles00593/: MP080_00.json  MP080_06.json  MP080_08.json  MP080_10.json  MP080_12.json  MP080_13.json  MP081_00.json  MP081_01.json  MP081_04.json  MP081_06.json  MP081_07.json  MP081_08.json  MP081_10.json  MP081_11.json  MP081_12.json  MP081_13.json  MP081_14.json  MP082_01.json  MP082_04.json  MP082_06.json  MP083_01.json  MP083_02.json  MP083_03.json  MP083_05.json  MP083_06.json  MP084_00.json  MP084_01.json  MP084_03.json
resources/maps/json/slps01055/: MP080_02.json  MP080_03.json  MP080_04.json  MP080_05.json  MP080_07.json  MP080_08.json  MP080_11.json  MP081_00.json  MP081_02.json  MP081_03.json  MP081_04.json  MP081_05.json  MP081_06.json  MP081_09.json  MP081_11.json  MP081_12.json  MP081_14.json  MP081_15.json  MP082_01.json  MP082_02.json  MP082_03.json  MP082_05.json  MP082_06.json  MP083_00.json  MP083_01.json  MP083_03.json  MP083_04.json  MP083_05.json  MP084_00.json  MP084_01.json  MP084_02.json  MP084_03.json
resources/maps/json/slus00530/: MP010_00.json  MP010_01.json  MP010_02.json  MP010_03.json  MP010_04.json  MP010_05.json  MP010_06.json  MP011_00.json  MP011_01.json  MP011_03.json  MP011_04.json  MP012_00.json  MP012_01.json  MP012_02.json  MP012_03.json  MP012_04.json  MP012_05.json  MP012_06.json  MP013_00.json  MP013_01.json  MP014_00.json  MP014_01.json  MP014_02.json  MP014_03.json  MP014_04.json  MP015_01.json  MP015_02.json  MP015_03.json  MP015_04.json  MP016_00.json  MP016_01.json  MP016_02.json  MP016_03.json  MP016_04.json  MP017_01.json  MP017_02.json  MP017_03.json  MP018_00.json  MP018_01.json  MP018_02.json  (+202 more)
tests/: CMakeLists.txt  checksum.cpp  colour.cpp  directory.cpp  map.cpp  utils.cpp  utils.hpp
tests/testdata/: MP010_00.MAP
